# no-gtk-text-editor

./: .gitmodules  CMakeLists.txt  README.md  brainstorming_notes  cursor-fs  cursor-vs  drawing.cpp  drawing.hpp  editable_text.cpp  editable_text.hpp  lib.cpp  lib.h  main.cpp  measurements  notes  opengl.cpp  opengl.h  quad-fs  quad-vs  text-fs  text-vs  text_buffer.cpp  text_buffer.hpp  text_drawing.cpp  text_drawing.hpp  ui.cpp  ui.hpp
glad/include/glad/: glad.h
glad/src/: glad.c
glfw-3.3.8/src/: init.c
